# Jan 30, 2026 (DEV20260tY0)
implemented resuming
fixed an obscure bug that caused players to be eliminated inappropriately

# Jan 29, 2026 (DEV20260sY0)
moved to replay file v6
did a lot of backend work for the server, should be much easier to add stuff to replays now

# Jan 28, 2026 (DEV20260rY0)
fixed a visual bug that caused client turn timers to desync when the game was paused

# Jan 28, 2026 (DEV20260rX0)
changed how save files are generated with turn time rules

# Jan 26, 2026 (DEV20260pY0)
added debugging tools

# Jan 17, 2026 (Alpha 1.7.5)
added ability to pause and export games (note: pausing a game does pause any turn time rules server-side, but not on the client)
fixed issue #58
got admin page to a workable state
added ability to view sanctions placed on your account
added ability to appeal sanctions
began work on moderation tools

# Dec 13, 2025 [hotfix] (Alpha 1.7.4)
added limit to length of account id and name

# Dec 12, 2025 (Alpha 1.7.3)
fixed a bug where finishing a replay caused the page to be unable to step replays until reloaded
added custom team colors
added ability to store arbitrary metadata in replay files

# Dec 10, 2025 (Alpha 1.7.2)
bot names are now displayed in the joined list
the joined list now has a maximum width for names, hover on a name to see the full name if it's clipped
allowed "kick" button to be used once game starts
fixed issue where certain event handlers stayed attached to websockets when they should have been removed

# Dec 9, 2025 (ALPHA 1.7.1)
fixed bots and added optimized board evaluation
fixed memory limits not working for bots
bot freya now searches up to 255 moves in the future (scales down with board size to 5 moves on 36x36 boards)

# Dec 6, 2025 (Alpha 1.7.0)
account emails are now hidden by default, and can be shown by pressing a button
added settings page
added name change UI
added flags for restricting who can send a friend request to an account (NOTE: all requests are enabled by default)