@@ -174,6 +174,7 @@
                                 <option value="1" selected>Per Turn</option>
                                 <option value="2">Chess</option>
                             </select>
+                            <br>
                             <!-- <div> -->
                                 <label for="room-rules-timers-penalty">Penalty: </label>
                                 <select id="room-rules-timers-penalty">
@@ -212,6 +213,14 @@
                                 /**@type {HTMLInputElement} */
                                 const room_rules_timers_limit_seconds = document.getElementById("room-rules-timers-limit-seconds");
                             </script>
+                        </div>
+                        <div class="form-row">
+                            <label for="room-rules-scoring">Turn Timers: </label>
+                            <select id="room-rules-scoring">
+                                <option value="0" selected>Elimination</option>
+                                <option value="1">Tiles</option>
+                                <option value="2">Pieces</option>
+                            </select>
                         </div>
                     </div>
                 </div>
