@@ -87,6 +87,7 @@
                     <th scope="col">Local Id</th>
                     <th scope="col">Role</th>
                     <th scope="col">Time</th>
+                    <th scope="col">Score</th>
                     <!-- column for buttons to kick/promote -->
                     <th scope="col">Actions</th>
                 </thead>
